Unit testing using Jest.
